# SeeingC

./: .gitignore  CMakeLists.txt  LICENSE  README.md  autoupdater.sh  build.sh  compress.sh  dependencies.sh  export.sh  install.sh  requirements.txt  save_log.sh  seeing.service  settings.txt  start.sh  testAsi.py  testAsiCV.py  testCV.py  usbdaemon.sh
input/: phd_01.tiff  phd_02.tiff
noimage/: noimage.tif
src/: AsiCamera.hpp  Camera.hpp  Image.cpp  Image.hpp  Profil.cpp  Profil.hpp  Settings.cpp  Settings.hpp  UpdateManager.cpp  UpdateManager.hpp  VirtualCamera.hpp  WebServer.cpp  WebServer.hpp  main.cpp  serial.cpp  serial.h  util.hpp
static/: global.css  global.js
templates/: index.html
